[package]
edition = "2021"
name = "gstreamer-rs_main"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["napi4"] }
napi-derive = "2.5.0"
gstreamer = { version = "0.18.8" }

[build-dependencies]
napi-build = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[profile.release]
lto = true
